Added js and input on endpoint for saving tile textures.